changed to use Form objects and validation.

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -8,3 +8,7 @@ NotEmpty.loginForm.password=密码不能为空
 NotEmpty.modifyBookableForm.name=名称不能为空
 
 NotEmpty.createBookableForm.name=名称不能为空
+
+NotEmpty.profileForm.email=电子邮箱不能为空
+NotEmpty.changePasswordForm.password=当前密码不能为空
+NotEmpty.changePasswordForm.newPassword=新密码不能为空
